--- a/Exercises/Development/Boyer_Moore_Alignment_Exercise.html
+++ b/Exercises/Development/Boyer_Moore_Alignment_Exercise.html
@@ -112,23 +112,41 @@
     }   
   }
 
+  //this is a recursive function to find the real last index of the suffix
+  function find_last_match(str, p, sub) {
+    var local_answer = str.lastIndexOf(sub.substring(p+1, sub.length));
+    if(local_answer == -1) { //base case, suffix not found 
+      return -1;
+    } else if(str.charAt(local_answer - 1) != sub.charAt(p)) { //we found our match
+      return local_answer;
+    } else { //shorten the string and try again so we don't get the same sub string
+      return find_last_match(str.substring(0, str.length-1), p, sub); 
+    }       
+  }
   function compute_align_table( sub ) {
     var align = new Array();
-    var substr = sub.join("");
+    //console.log(sub);
     var offset, suffix_length, index_of_sub;
     align[sub.length-1] = 1;
     for(var i = sub.length-2; i >=0; i--){
       var p = i;
       suffix_length = sub.length - (p+1);
-      index_of_sub = substr.substring(0, p-1).lastIndexOf(substr.substring(p+1, sub.length));
+
+
+      offset = sub.length;
+      index_of_sub = -1;
+      var sub_temp = sub.substring(0, sub.length-1);
+
+      index_of_sub = find_last_match(sub_temp, p, sub);
+
       offset = sub.length;
       if(index_of_sub != -1){
         offset = (p+1) - index_of_sub;
       }
+
       align[p] = suffix_length + offset;
     }
-    find_best_solution(align);
-
+	find_best_solution(align);
     return align;
   }
 
@@ -154,7 +172,7 @@
     str_arr = alignment.ds.array(str, {indexed: true});
 
     //initializing the alignment array
-    var alignment_returned = compute_align_table(str);
+    var alignment_returned = compute_align_table(str.join(""));
 
     align_arr = alignment.ds.array(alignment_returned);
     align_arr.highlight(answer_index);
