Moved sorting specific functions to sortUtils.js, changed DEBUG_MODE to use localStorage

--- a/AV/Sorting/quicksortAV.html
+++ b/AV/Sorting/quicksortAV.html
@@ -50,6 +50,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
+<script src="../sortUtils.js"></script>
 <script src="quicksortCODE.js"></script>
 <script src="quicksortAV.js"></script>
 </body>
