--- a/AV/Sorting/radixLinkAV.html
+++ b/AV/Sorting/radixLinkAV.html
@@ -59,6 +59,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
+<script src="../sortUtils.js"></script>
 <script src="radixLinkAV.js"></script>
 </body>
 </html>
