--- a/AV/Sorting/shellsortAV.html
+++ b/AV/Sorting/shellsortAV.html
@@ -62,6 +62,7 @@
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
+<script src="../sortUtils.js"></script>
 <script src="shellsortCODE.js"></script>
 <script src="shellsortAV.js"></script>
 </body>
