--- a/Exercises/Development/listlinkedDeletion.html
+++ b/Exercises/Development/listlinkedDeletion.html
@@ -21,11 +21,11 @@ Written by Junyang Chen and Cliff Shaffer
 
   <style>
     .jsavcontainer {
-      height: 225px;
+      height: 160px;
       border: 0px;
     }
 	.jsavcanvas{
-      height: 225px;
+      height: 160px;
     }
     .jsavhorizontallist.jsavautoresize .jsavnode {
       min-width: 30px;
@@ -92,6 +92,7 @@ var jsav,           // The JSAV object
   jsavList,        // JSAV list
   listSize,        // JSAV list size
   jsavCopyArr,
+  labelReturn,
   currPosition,  // Position to be inserted
   userInput,      // Boolean: Tells us if user ever did anything
   selected_pointer,
@@ -347,6 +348,7 @@ var f_reset = function () {
   jsavList.addFirst("null");
   jsavList.layout(); 
   jsavCopyArr = jsav.ds.array(["null"],{left : leftMargin+ 10 + 73 * (currPosition + 1), top: topMargin + 70});
+  labelReturn = jsav.label("return", {left: leftMargin - 35 +73 * (currPosition + 1), top: topMargin + 74});
   odsa_head = jsavList.get(0);
   jsavList.get(0).odsa_tail = null;
   for(var i = 0; i < listSize; i ++)
@@ -417,7 +419,6 @@ var initJSAV = function (size, pos) {
   if(currPosition != listSize-2){
     answerArr.splice(currPosition + 1, 1);
   }
-  console.log(answerArr);
   
   // Set up handler for newnode
   $("#makenull").click(function () { nullClickHandler(); });
@@ -470,7 +471,7 @@ var checkAnswer = function (arr_size, curr_pos) {
       <div class="question">
 	    <p>Delete the element in current position, which is position <b><var>curr_pos</var></b>.</p>
         <p>To move an element, click on it (to highlight it), then click on where you
-        want it to go. You can make a node poiting to "null" by firstly clicking the pointer area of the node and then clicking the "makenull" button.</p>
+        want it to go. You can make a node poiting to "null" by firstly clicking the pointer area of the node and then clicking the "makenull" button. To change the target of labels, such as "curr" and "tail", click on the label(to highlight it), then click on the node you want it to point to.</p>
         <input id="reset" type="button" value="Reset" />
 		<input id="makenull" type="button" value="makenull" />
         <div id="jsav" style = "{background-color : #333}"></div>
@@ -487,9 +488,10 @@ var checkAnswer = function (arr_size, curr_pos) {
         </div>
       </div>
       <div class="hints">
-        <p>To shift elements after "current" one position to the right, the first step could be swapping element <var>arr_size - 1</var> with position <var>arr_size</var></p> 
-	<p>Then, keep swapping element i with i+1 until you make "current" empty for insertion </p>
-        <p>Insert value to "current" position</p>
+        <p>If "curr" points to the same node as "tail", the default list is a correct answer. Otherwise, the first step could be to remember the value of the "curr" node.</p>
+        <p>Copy value to "curr" from its next node.</p> 
+        <p>If "curr" points to the node proceding tail, sets the "curr" node to point to "null". Label "tail" should point to the current node. Otherwise, the "curr" node should point to the following node of the node it used to point to. </p>
+        <p></p>
       </div>
     </div>
   </div>
